--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/recursive-readdir": "^2.2.1",
 		"prettier": "^2.8.8",
 		"tsup": "^6.7.0",
 		"vitest": "^0.31.0"
 	},
 	"dependencies": {
-		"enquirer": "^2.3.6"
+		"enquirer": "^2.3.6",
+		"recursive-readdir": "^2.2.3"
 	}
 }
