--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/recursive-readdir": "^2.2.1",
-		"prettier": "^2.8.8",
 		"tsup": "^6.7.0",
 		"vitest": "^0.31.0"
 	},
 	"dependencies": {
 		"chalk": "^5.2.0",
 		"enquirer": "^2.3.6",
+		"pretty-quick": "^3.1.3",
 		"recursive-readdir": "^2.2.3"
 	}
 }
