--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"bundle-packages": "tsup",
 		"bundle-packages:watch": "tsup --watch",
-		"migrate-cra": "echo \"In Progress\" && exit 0"
+		"migrate-cra": "node dist/cra"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,7 +17,7 @@
 		"vitest": "^0.31.0"
 	},
 	"dependencies": {
-		"chalk": "^5.2.0",
+		"chalk": "^4.1.0",
 		"enquirer": "^2.3.6",
 		"pretty-quick": "^3.1.3",
 		"recursive-readdir": "^2.2.3"
