--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 		"enquirer": "^2.3.6",
 		"pretty-quick": "^3.1.3",
 		"recursive-readdir": "^2.2.3"
+	},
+	"bin": {
+		"migrate-cra-to-vite": "node cra"
 	}
 }
