--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"vitest": "^0.31.0"
 	},
 	"dependencies": {
+		"chalk": "^4.1.0",
 		"enquirer": "^2.3.6",
 		"pretty-quick": "^3.1.3",
 		"recursive-readdir": "^2.2.3"
