doc: Updated examples for CLI usage from npx

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "migrate-to-vite",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
@@ -21,8 +21,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/recursive-readdir": "^2.2.1",
-		"tsup": "^6.7.0",
-		"vitest": "^0.31.0"
+		"tsup": "^6.7.0"
 	},
 	"dependencies": {
 		"chalk": "^4.1.0",
