--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "migrate-to-vite",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"description": "Migrate your projects to Vite using pre-built codemods",
 	"main": "index.js",
 	"scripts": {
@@ -20,13 +20,14 @@
 	"author": "Devesh Kumar",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/prettier": "^2.7.2",
 		"@types/recursive-readdir": "^2.2.1",
 		"tsup": "^6.7.0"
 	},
 	"dependencies": {
 		"chalk": "^4.1.0",
 		"enquirer": "^2.3.6",
-		"pretty-quick": "^3.1.3",
+		"prettier": "^2.8.8",
 		"recursive-readdir": "^2.2.3"
 	},
 	"bin": {
